<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Yandex.Money Transfer</string>
    <string name="greeting">Welcome!</string>
    <string name="about">The application allows you to transfer money between Yandex.Money wallets.\nWhen authorization is done you will be asked to create a PIN-code you will need to enter every time you open the application. This is necessary to ensure the safety of your wallet.</string>
    <string name="no_network_connection">No network connection</string>
    <string name="refresh">Refresh</string>
    <string name="tap_to_exit">Press \"Back\" again to exit</string>
    <string name="error_in_server_response">An error occurred while processing server response</string>
    <string name="access_denied">Access denied</string>
    <string name="authorization_failed">Authorization failed</string>
    <string name="pin_min_length">Please enter at least %1$d digits</string>
    <string name="pin_max_length">PIN-code length should not exceed %1$d symbols</string>
    <string name="can_not_log_in">Can not log in</string>
    <string name="create_pin">Create PIN-code:</string>
    <string name="enter_pin">Enter PIN-code:</string>
    <string name="repeat_pin">Repeat PIN-code:</string>
    <string name="pins_do_not_match">Entered PIN-codes do not match</string>
    <string name="wrong_pin">Wrong PIN-code</string>
    <string name="my_account">My Account</string>
    <string name="ad">Ad or something else ;)</string>
    <string name="account_status_anonymous">Anonymous account</string>
    <string name="account_status_named">Named account</string>
    <string name="account_status_identified">Identified account</string>
    <string name="balance">Balance:</string>
    <string name="available">Available:</string>
    <string name="rub">&#160;Rub.</string>
    <string name="action_options">Options</string>
    <string name="action_exit">Exit</string>
    <string name="transfer">Transfer</string>
    <string name="history">History</string>
    <string name="contacts">Contacts</string>
    <string name="goods_and_services">Goods and Services</string>
    <string name="button_transfer">Transfer money to another wallet</string>
    <string name="recipient">Recipient</string>
    <string name="amount_due">Total (fee 0.5%)</string>
    <string name="amount">To be paid</string>
    <string name="message">Message to recipient (optional)</string>
    <string name="codepro">Security code</string>
    <string name="expire_period">The number of days to receive the transfer</string>
    <string name="incorrect_recipient">Incorrect recipient</string>
    <string name="incorrect_amount">Incorrect amount value</string>
    <string name="incorrect_expire_period">Validity of the protection code must be a number from 1 to 365</string>
    <string name="transfer_success">Transfer completed successfully!</string>
    <string name="transfer_in_progress">Transfer is not complete. Please try again later</string>
    <string name="payee_not_found">The recipient of the transfer is not found</string>
    <string name="not_enough_funds">Not enough funds</string>
    <string name="account_blocked">Your account is blocked</string>
    <string name="limit_exceeded">Limit to perform operations is exceeded</string>
    <string name="transfer_refuse">Transfer is refused</string>
    <string name="default_transfer_error_message">Something is wrong; try again later</string>
    <string name="load_history_failed">Unable to download transaction history</string>
</resources>
