<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/refresh"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black_12">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!-- I've understood CardViews are misplaced here in terms of Material Design, -->
            <!-- but UI and UX are a giant task that are not paramount at the moment. -->
            <android.support.v7.widget.CardView style="@style/CardInfo">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp">

                    <ImageView
                        android:id="@+id/avatar"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:background="@color/accent"
                        android:src="@drawable/ic_account_box_black_48dp"
                        android:scaleType="centerInside"
                        android:contentDescription="@null" />

                    <TextView
                        android:id="@+id/login"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="22dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginStart="20dp"
                        android:textSize="@dimen/header_text_size"
                        android:layout_toRightOf="@id/avatar"
                        android:layout_toEndOf="@id/avatar" />

                    <TextView
                        style="@style/MainText"
                        android:id="@+id/account_number"
                        android:layout_marginTop="10dp"
                        android:layout_below="@id/login"
                        android:layout_alignLeft="@id/login"
                        android:layout_alignStart="@id/login" />

                </RelativeLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView style="@style/CardInfo">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="20dp">

                    <TextView
                        style="@style/MainText"
                        android:id="@+id/account_status"
                        android:layout_centerHorizontal="true" />

                    <TextView
                        style="@style/MainText"
                        android:id="@+id/balance"
                        android:text="@string/balance"
                        android:layout_marginTop="10dp"
                        android:layout_below="@id/account_status" />

                    <TextView
                        style="@style/MainText"
                        android:id="@+id/balance_value_rub"
                        android:text="@string/rub"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentEnd="true"
                        android:layout_alignTop="@id/balance" />

                    <TextView
                        style="@style/MainText"
                        android:id="@+id/balance_value"
                        android:layout_alignTop="@id/balance"
                        android:layout_toLeftOf="@id/balance_value_rub"
                        android:layout_toStartOf="@id/balance_value_rub" />

                    <TextView
                        style="@style/MainText"
                        android:id="@+id/balance_available"
                        android:text="@string/available"
                        android:layout_marginTop="10dp"
                        android:layout_below="@id/balance" />

                    <TextView
                        style="@style/MainText"
                        android:id="@+id/balance_available_value_rub"
                        android:text="@string/rub"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentEnd="true"
                        android:layout_alignTop="@id/balance_available" />

                    <TextView
                        style="@style/MainText"
                        android:id="@+id/balance_available_value"
                        android:layout_alignTop="@id/balance_available"
                        android:layout_toLeftOf="@id/balance_available_value_rub"
                        android:layout_toStartOf="@id/balance_available_value_rub" />

                </RelativeLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView style="@style/CardInfo">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp">

                    <Button
                        android:id="@+id/button_transfer"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/button_transfer"
                        android:drawablePadding="10dp"
                        android:drawableRight="@drawable/ic_send_black_24dp"
                        android:layout_centerVertical="true"
                        android:layout_centerHorizontal="true" />

                </RelativeLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                style="@style/CardInfo"
                android:layout_marginBottom="@dimen/card_info_margin">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="30dp">

                    <TextView
                        style="@style/MainText"
                        android:id="@+id/ad"
                        android:layout_centerInParent="true"
                        android:text="@string/ad" />

                </RelativeLayout>

            </android.support.v7.widget.CardView>

        </LinearLayout>

    </ScrollView>

</android.support.v4.widget.SwipeRefreshLayout>
